--- a/views/sendOtp.ejs
+++ b/views/sendOtp.ejs
@@ -5,7 +5,7 @@
 </head>
 <body>
 <form method="POST" action="/send">
-	<input type="email" name="email">
+	<input type="email" name="email" required>
 	<input type="submit">
 </form>
 </body>
